--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "feather-icons-react": "^0.7.0",
     "iconify": "^1.4.0",
     "json-server": "^1.0.0-beta.1",
     "next": "^14.2.4",
